err/errbit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/errbit'...
Compiling './lib/python3.5/site-packages/errbit/client.py'...
***   File "./lib/python3.5/site-packages/errbit/client.py", line 84
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/errbit/ploneintegration'...
Listing './lib/python3.5/site-packages/errbit/ploneintegration/Extensions'...
Compiling './lib/python3.5/site-packages/errbit/ploneintegration/cleanup.py'...
***   File "./lib/python3.5/site-packages/errbit/ploneintegration/cleanup.py", line 25
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/errbit/ploneintegration/profiles'...
Listing './lib/python3.5/site-packages/errbit/ploneintegration/profiles/default'...
Listing './lib/python3.5/site-packages/errbit/ploneintegration/profiles/uninstall'...
Listing './lib/python3.5/site-packages/errbit/ploneintegration/resources'...
Compiling './lib/python3.5/site-packages/errbit/request.py'...
***   File "./lib/python3.5/site-packages/errbit/request.py", line 17
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/errbit/tests'...
Listing './lib/python3.5/site-packages/errbit/tests/assets'...
Compiling './lib/python3.5/site-packages/errbit/tests/test_xmlgenerator.py'...
***   File "./lib/python3.5/site-packages/errbit/tests/test_xmlgenerator.py", line 153
    request = {'cgi-data': {4028847644L: 10}}
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/errbit/utils.py'...
***   File "./lib/python3.5/site-packages/errbit/utils.py", line 14
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/errbit-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmlbuilder'...
Listing './lib/python3.5/site-packages/xmlbuilder-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
